objects/Employee_Club_Information__c.object
<CustomObject>
    <description>President&apos;s Club criteria for a specific sales rep</description>
    <fields>
        <fullName>Assigned_Plan_QC__c</fullName>
        <label>Presidents Club Plan $</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Board_of_Directors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board of Directors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Book_Of_Business_Presidents_Club__c</fullName>
        <label>Book Of Business Presidents Club</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Of_Business__c</fullName>
        <label>Book Of Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eagle_Award__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eagle Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>Employee Club Information</relationshipLabel>
        <relationshipName>R00N40000001lhILEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hall_of_Fame__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hall of Fame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pace_Setters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pace Setters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pewter_Award_Reason__c</fullName>
        <description>Enter Award Reason if you checked Pewter Award checkbox.</description>
        <inlineHelpText>Enter Award Reason if you checked Pewter Award checkbox.</inlineHelpText>
        <label>Pewter Award Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pewter_Award__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pewter Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QC_Tier_Assigned__c</fullName>
        <label>QC Tier Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified_for_Club__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified for Club</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPX_ClubInfo_CreateDate__c</fullName>
        <label>SPX ClubInfo CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SPX_ClubInfo_ID__c</fullName>
        <label>SPX ClubInfo ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Employee Club Information</label>
    <nameField>
        <displayFormat>ID {00000}</displayFormat>
        <label>Emp Club Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Club Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pewter_Award_Type_Required</fullName>
        <active>false</active>
        <errorConditionFormula>If( AND((Pewter_Award__c = true), LEN( Pewter_Award_Reason__c) = 0), true, false)</errorConditionFormula>
        <errorDisplayField>Pewter_Award_Reason__c</errorDisplayField>
        <errorMessage>You must specify the award type if &quot;Pewter Award&quot; is checked.</errorMessage>
    </validationRules>
</CustomObject>